<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:hint="@string/dialogTask"
        android:id="@+id/dialogAddTask"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:inputType="datetime"
        android:hint="@string/dialogAddDate"
        android:id="@+id/dialogAddDate"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogButton"
        android:id="@+id/dialogButton"/>
</RelativeLayout>